# regolith-wallpaper

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  justfile  package.json  pnpm-lock.yaml  regolith-wallpaper.desktop
.cargo/: config.toml
.github/workflows/: release-please.yml
src/: app.rs  commands.rs  configuration.rs  error.rs  lib.rs  main.rs  status_bar.rs  utils.rs  wallpaper_image.rs  wallpaper_path.rs
