[package]
name = "regolith-wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
iced = { version = "0.10", features = ["image"] }
thiserror = "1.0"
tokio = { version = "1.34", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
