[package]
name = "regolith-wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
iced = { git = "https://github.com/iced-rs/iced", rev = "100d15f30654d446cffe2fb60a435c79c81b0188", features = [
    "tokio",
    "image",
] }
thiserror = "1.0"
tokio = { version = "1.34", features = ["fs", "rt"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
