[package]
name = "regolith-wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
iced = { version = "0.10", features = ["tokio", "image", "debug"] }
iced_aw = { version = "0.7", default-features = false, features = ["grid"] }
thiserror = "1.0"
tokio = { version = "1.34", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "process",
] }
tokio-stream = { version = "0.1", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.24"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
